# ChangeLog for x11-libs/goocanvas
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  11 Oct 2008; Frédéric Lietart <thelinuxfr@free.fr> ChangeLog:
  Initial Import
