@@ -1,0 +1,3 @@
+DIST libepc-0.3.5.tar.bz2 434700 RMD160 9b8d4355df0268c25b7661fa9671bff0e20298c0 SHA1 179da288e601a619edefc17269e1624f65cd53cc SHA256 6326f66856c1f948914a1fbf07079562f9f47a812f06c5411bec4fd5ea69f511
+EBUILD libepc-0.3.5.ebuild 418 RMD160 99415e0f3d32fc204a53a800b0941107582018e8 SHA1 0cda75b45dcbdfad67be2fe461de22ef2886b4b4 SHA256 b619cb15bb1a0f08c46e3a442694e0cd8850ffb40c597797cd97d13d5a375499
+MISC ChangeLog 211 RMD160 c2737158d857317a44ebe81b8a71f8e42120c54a SHA1 14ef36a3f73f43490f3dbeb111cb556ee659e772 SHA256 35a860a896f54302dbfe24618861fd5cf62fb1b44b3528bfd15bc30a448ffa48
