@@ -1,2 +1,5 @@
 DIST goocanvas-0.10.tar.gz 796269 RMD160 e2ab3aedc51633e52af3cf3f28be4153e5d0adbe SHA1 973c2d8eb8efea6d8ef3aea93c6b83624b3a0960 SHA256 e96275deb67aedb6fa3e2734d6586c7e60a46e3c81274fb7bafbd891d7d7892c
+DIST goocanvas-0.12.tar.bz2 551718 RMD160 2c7880cd273a9168763bbbb5679c4a4b95a4fc8c SHA1 bdd6f682543c3b5b722342a69c17541fa184f8ad SHA256 ad9c720ad3908aaeb4fde1e9b1d60dd815d050ab2e83bb1672be4f6e6e3565e0
 EBUILD goocanvas-0.10-r1.ebuild 948 RMD160 017175913f15b0c922120be479caa6185591183e SHA1 83e13e63fe98dfdcc8b3fbf7a90ecd6a3d395bb8 SHA256 c0a377144909c97936d3820560fd0425da92290168f8fb516ae46bcfa637ba12
+EBUILD goocanvas-0.12.ebuild 946 RMD160 1e0da3f74d876b673cf9f9381f23ce3fa5bf549e SHA1 3d372e36d8727736f00c92ed55bf201616f4f919 SHA256 7e0baebace68b47561c18218d62f97285d502c98f1d84945ebf0013466d23f79
+MISC ChangeLog 301 RMD160 50312d9a61e6d3072765bd8ae6e40d98a59b572f SHA1 772fa65ce4b2a02429e2f1561a27e54a80497980 SHA256 870f3c7e8e585dc627a102dfde6a471175d1334dfa129e226e97a9e06ae9a21d
