@@ -1,0 +1,3 @@
+DIST goocanvasmm-0.11.0.tar.gz 517941 RMD160 a9a450cad4dd434d078991ff78eb191f60d5e3d0 SHA1 30166e29d6ea6d00bf05263bae8610485e043558 SHA256 23573f1f845924eb22e88802ffd8869be88973d27d15b94f7199c910bc197023
+EBUILD goocanvasmm-0.11.0.ebuild 738 RMD160 f41f59830f3f2367ed70a887b8e225c1b28c7335 SHA1 0a3f5648068cc83ba69a380846feacdab5f8647d SHA256 4961194cc28b81024d24472f840b5857d495645804019e3d5051c33fc0f33b9d
+MISC ChangeLog 205 RMD160 a57e8f12fab56fe0ba76c78595fb994e6d6019bf SHA1 20fb19a00a33da364d036790045d83b7dc3ed5be SHA256 0726e7db00ce2617e4e2b553a6b987cfc5dd93512d6d9f44ca12886f0aad7087
