@@ -1,0 +1,7 @@
+# ChangeLog for net-libs/libepc
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: $
+
+  13 Oct 2008; Frédéric Lietart <thelinuxfr@free.fr> +libepc-0.3.5.ebuild:
+  Initial Import
+
