@@ -1,0 +1,7 @@
+# ChangeLog for x11-libs/goocanvasmm
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: $
+
+  13 Oct 2008; Frédéric Lietart <thelinuxfr@free.fr> ChangeLog:
+  Initial Import
+
