@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 Oct 2008; Frédéric Lietart <thelinuxfr@free.fr>
+  +goocanvas-0.12.ebuild:
+  Version bump.
+
   11 Oct 2008; Frédéric Lietart <thelinuxfr@free.fr> ChangeLog:
   Initial Import
 
